pixelntfy/pixelntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelntfy
  namespace: production
  labels:
    app: pixelntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixelntfy
  template:
    metadata:
      labels:
        app: pixelntfy
    spec:
      containers:
      - name: pixelntfy
        image: imranrdev/pixel-ntfy:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pixelntfy
  namespace: production
  labels:
    app: pixelntfy
spec:
  selector:
    app: pixelntfy
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pixelntfy
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pixelntfy.staging.imranr.dev`)
      kind: Rule
      services:
        - name: pixelntfy
          port: 3000
  tls:
    secretName: imranr-dev-tls
